--- a/python_z_to_h_day_2.ipynb
+++ b/python_z_to_h_day_2.ipynb
@@ -84,7 +84,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "g-XJj49Jo1A_",
-        "outputId": "8ec72995-38b9-4e56-a149-4580258135e3"
+        "outputId": "9d64d8aa-fd1c-4c74-9347-08e32fa6da32"
       },
       "source": [
         "#PROJECT :TO GENERATE A OTP\n",
@@ -97,12 +97,12 @@
         "  otp = otp + random.choice(characters)\n",
         "print('OTP',otp)"
       ],
-      "execution_count": 16,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "OTP n1C73JpL\n"
+            "OTP TJ7QvArz\n"
           ],
           "name": "stdout"
         }
