--- a/python_z_to_h_day_2.ipynb
+++ b/python_z_to_h_day_2.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "python z to h day 2.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "authorship_tag": "ABX9TyPeZIFiUvPQ/dYxSBLSP52B",
       "include_colab_link": true
     },
@@ -24,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Maduraa-ravi/Maduraa-ravi.github.io/blob/main/python_z_to_h_day_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Maduraa-ravi/Maduraa-ravi.github.io/blob/python-z-to-h/python_z_to_h_day_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -54,7 +55,7 @@
         "print(li)\n",
         "list(filter(lambda a:a!=3,li))\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -84,7 +85,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "g-XJj49Jo1A_",
-        "outputId": "8ec72995-38b9-4e56-a149-4580258135e3"
+        "outputId": "9d64d8aa-fd1c-4c74-9347-08e32fa6da32"
       },
       "source": [
         "#PROJECT :TO GENERATE A OTP\n",
@@ -97,12 +98,12 @@
         "  otp = otp + random.choice(characters)\n",
         "print('OTP',otp)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "OTP n1C73JpL\n"
+            "OTP TJ7QvArz\n"
           ],
           "name": "stdout"
         }
